@@ -1,4 +1,4 @@
-// generated 2008/2/14 2:20:40 CET by tobias@THINKPAD-T43.(none)
+// generated 2008/2/15 1:42:16 CET by tobias@THINKPAD-T43.(none)
 // using glademm V2.6.0
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -104,13 +104,14 @@ gNinjamClient_glade::gNinjamClient_glade(
    
    Gtk::Adjustment *hscale_metronome_pan_adj = Gtk::manage(new class Gtk::Adjustment(0, -1, 1, 0.00999999977648, 0.10000000149, 0));
    hscale_metronome_pan = Gtk::manage(new class Gtk::HScale(*hscale_metronome_pan_adj));
-   checkbutton_master_mute = Gtk::manage(new class Gtk::CheckButton(_("Mute")));
-   checkbutton_metronome_mute = Gtk::manage(new class Gtk::CheckButton(_("Mute")));
+   checkbutton_master_mute = Gtk::manage(new class Gtk::CheckButton(_("M")));
+   checkbutton_metronome_mute = Gtk::manage(new class Gtk::CheckButton(_("M")));
    
    Gtk::Adjustment *hscale_master_volume_adj = Gtk::manage(new class Gtk::Adjustment(0, -120, 20, 0.5, 1, 0));
    hscale_master_volume = Gtk::manage(new class Gtk::HScale(*hscale_master_volume_adj));
+   checkbutton_metronome_stereo = Gtk::manage(new class Gtk::CheckButton(_("St")));
    progressbar_master = Gtk::manage(new class Gtk::ProgressBar());
-   checkbutton_metronome_stereo = Gtk::manage(new class Gtk::CheckButton(_("Stereo")));
+   checkbutton_sessionmode = Gtk::manage(new class Gtk::CheckButton(_("Session Mode")));
    combobox_metronome_output = Gtk::manage(new class Gtk::ComboBox());
    
    Gtk::Table *table2 = Gtk::manage(new class Gtk::Table(2, 2, false));
@@ -261,13 +262,15 @@ gNinjamClient_glade::gNinjamClient_glade(
    hscale_metronome_pan->set_value_pos(Gtk::POS_LEFT);
    checkbutton_master_mute->set_name("checkbutton_master_mute");
    checkbutton_master_mute->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*checkbutton_master_mute, _("Mute"), "");
    checkbutton_master_mute->set_relief(Gtk::RELIEF_NORMAL);
-   checkbutton_master_mute->set_mode(true);
+   checkbutton_master_mute->set_mode(false);
    checkbutton_master_mute->set_active(false);
    checkbutton_metronome_mute->set_name("checkbutton_metronome_mute");
    checkbutton_metronome_mute->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*checkbutton_metronome_mute, _("Mute"), "");
    checkbutton_metronome_mute->set_relief(Gtk::RELIEF_NORMAL);
-   checkbutton_metronome_mute->set_mode(true);
+   checkbutton_metronome_mute->set_mode(false);
    checkbutton_metronome_mute->set_active(false);
    hscale_master_volume->set_size_request(200,-1);
    hscale_master_volume->set_name("hscale_master_volume");
@@ -277,12 +280,19 @@ gNinjamClient_glade::gNinjamClient_glade(
    hscale_master_volume->set_digits(1);
    hscale_master_volume->set_draw_value(true);
    hscale_master_volume->set_value_pos(Gtk::POS_RIGHT);
-   progressbar_master->set_name("progressbar_master");
    checkbutton_metronome_stereo->set_name("checkbutton_metronome_stereo");
    checkbutton_metronome_stereo->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*checkbutton_metronome_stereo, _("Stereo"), "");
    checkbutton_metronome_stereo->set_relief(Gtk::RELIEF_NORMAL);
-   checkbutton_metronome_stereo->set_mode(true);
+   checkbutton_metronome_stereo->set_mode(false);
    checkbutton_metronome_stereo->set_active(false);
+   progressbar_master->set_name("progressbar_master");
+   checkbutton_sessionmode->set_name("checkbutton_sessionmode");
+   checkbutton_sessionmode->set_flags(Gtk::CAN_FOCUS);
+   _tooltips.set_tip(*checkbutton_sessionmode, _("Session Mode"), "");
+   checkbutton_sessionmode->set_relief(Gtk::RELIEF_NORMAL);
+   checkbutton_sessionmode->set_mode(false);
+   checkbutton_sessionmode->set_active(false);
    combobox_metronome_output->set_name("combobox_metronome_output");
    table2->set_name("table2");
    table2->set_border_width(4);
@@ -296,9 +306,10 @@ gNinjamClient_glade::gNinjamClient_glade(
    table2->attach(*checkbutton_master_mute, 3, 4, 0, 1, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    table2->attach(*checkbutton_metronome_mute, 3, 4, 1, 2, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    table2->attach(*hscale_master_volume, 1, 2, 0, 1, Gtk::EXPAND|Gtk::FILL, Gtk::FILL, 0, 0);
-   table2->attach(*progressbar_master, 4, 6, 0, 1, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    table2->attach(*checkbutton_metronome_stereo, 4, 5, 1, 2, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
-   table2->attach(*combobox_metronome_output, 5, 6, 1, 2, Gtk::EXPAND|Gtk::FILL, Gtk::FILL, 0, 0);
+   table2->attach(*progressbar_master, 4, 7, 0, 1, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
+   table2->attach(*checkbutton_sessionmode, 6, 7, 1, 2, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
+   table2->attach(*combobox_metronome_output, 5, 6, 1, 2, Gtk::FILL, Gtk::FILL, 0, 0);
    handlebox1->set_name("handlebox1");
    handlebox1->set_shadow_type(Gtk::SHADOW_OUT);
    handlebox1->set_handle_position(Gtk::POS_LEFT);
@@ -464,8 +475,9 @@ gNinjamClient_glade::gNinjamClient_glade(
    checkbutton_master_mute->show();
    checkbutton_metronome_mute->show();
    hscale_master_volume->show();
-   progressbar_master->show();
    checkbutton_metronome_stereo->show();
+   progressbar_master->show();
+   checkbutton_sessionmode->show();
    combobox_metronome_output->show();
    table2->show();
    handlebox1->show();
@@ -516,6 +528,7 @@ gNinjamClient_glade::gNinjamClient_glade(
    checkbutton_metronome_mute->signal_toggled().connect(SigC::slot(*this, &gNinjamClient_glade::on_checkbutton_metronome_mute_toggled), false);
    hscale_master_volume->signal_value_changed().connect(SigC::slot(*this, &gNinjamClient_glade::on_hscale_master_volume_value_changed), false);
    checkbutton_metronome_stereo->signal_toggled().connect(SigC::slot(*this, &gNinjamClient_glade::on_checkbutton_metronome_stereo_toggled), false);
+   checkbutton_sessionmode->signal_toggled().connect(SigC::slot(*this, &gNinjamClient_glade::on_checkbutton_sessionmode_toggled), false);
    combobox_metronome_output->signal_changed().connect(SigC::slot(*this, &gNinjamClient_glade::on_combobox_metronome_output_changed), false);
    chat_entry->signal_activate().connect(SigC::slot(*this, &gNinjamClient_glade::on_chat_entry_activate), false);
 }
