@@ -1,9 +1,9 @@
-// generated 2007/1/11 4:30:24 GMT by azz@cartman.at.offog.org.(none)
+// generated 2008/2/15 1:42:16 CET by tobias@THINKPAD-T43.(none)
 // using glademm V2.6.0
 //
 // DO NOT EDIT THIS FILE ! It was created using
-// glade-- /home/azz/src/gninjam/gninjam.glade
-// for gtk 2.10.6 and gtkmm 2.8.3
+// glade-- /home/tobias/src/svn/gninjam/branches/gninjam+session-mode+voice-chat/gninjam.glade
+// for gtk 2.12.0 and gtkmm 2.12.0
 //
 // Please modify the corresponding derived classes in ./src/gNinjamClient.hh and./src/gNinjamClient.cc
 
@@ -32,6 +32,7 @@ public:
 #endif //GLADEMM_DATA
 
 #include <gtkmm/window.h>
+#include <gtkmm/tooltips.h>
 #include <gtkmm/scale.h>
 #include <gtkmm/checkbutton.h>
 #include <gtkmm/progressbar.h>
@@ -49,6 +50,7 @@ class gNinjamClient_glade : public Gtk::Window
 {  
         
         GlademmData *gmm_data;
+        Gtk::Tooltips _tooltips;
 protected:
         class Gtk::HScale * hscale_metronome_volume;
         class Gtk::HScale * hscale_master_pan;
@@ -56,8 +58,9 @@ protected:
         class Gtk::CheckButton * checkbutton_master_mute;
         class Gtk::CheckButton * checkbutton_metronome_mute;
         class Gtk::HScale * hscale_master_volume;
-        class Gtk::ProgressBar * progressbar_master;
         class Gtk::CheckButton * checkbutton_metronome_stereo;
+        class Gtk::ProgressBar * progressbar_master;
+        class Gtk::CheckButton * checkbutton_sessionmode;
         class Gtk::ComboBox * combobox_metronome_output;
         class Gtk::HandleBox * handlebox1;
         class vbox_local * vbox_local;
@@ -97,6 +100,7 @@ private:
         virtual void on_checkbutton_metronome_mute_toggled() = 0;
         virtual void on_hscale_master_volume_value_changed() = 0;
         virtual void on_checkbutton_metronome_stereo_toggled() = 0;
+        virtual void on_checkbutton_sessionmode_toggled() = 0;
         virtual void on_combobox_metronome_output_changed() = 0;
         virtual void on_chat_entry_activate() = 0;
 };
