@@ -581,3 +581,6 @@
 
 2008/2/14 22:23:02 CET
 	update files from .glade file
+
+2008/2/15 1:42:16 CET
+	update files from .glade file
